# label-verify-hw

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.api  Dockerfile.worker  QUICKSTART_E2E.md  README.md  SECURITY.md  TROUBLESHOOTING.md  build-cloudflare.sh  deploy.sh  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.sqlx/: .gitkeep  query-248d468131a69c19a706dd76e706d19f5f44f067e678c2d3924881a54f2028da.json  query-3bb8d9300ae0aad138fdf5a474326ffad1cd522eb2652a9a21e463293d825603.json  query-4780ab528d57346fbed09ed57314c3673d8c465a36fc56d89257da727efe652a.json  query-e2508f010729ec650a86c212ba9846d6a31a9be10a97d82957ad86afdbb913ab.json
docs/: CI_CD_SETUP.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_SETUP.md  DATABASE_IMPLEMENTATION.md  DEPLOYMENT.md  E2E_CHECKLIST.md  E2E_TESTING_IMPLEMENTATION.md  HTTPS_SETUP.md  HTTPS_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_HTTPS.md  IMPLEMENTATION_SUMMARY_UI.md  IMPLEMENTATION_VALIDATION_2026-02-08.md  QUICK_REFERENCE.md  README.md  SPRINT_SUMMARY.md  TTB_COLA_INTEGRATION.md  UI_COMPARISON.md  UI_IMPROVEMENTS_VALIDATION.md
examples/: discover_test_labels.rs  extract_test_labels.rs  test_r2.rs  test_workers_ai.rs
migrations/: 20260207_001_create_verification_jobs.sql  20260207_002_create_reference_tables.sql  20260208001_add_ttb_cola_match_type.sql
scripts/: README.md  discover_test_labels.sh  query_ttb_cola.py  run_e2e_tests.sh  seed_total_wine_data.py  seed_ttb_cola_cache.py  ttb_cola_client.py  validate_ui.sh
src/: app_state.rs  lib.rs  main.rs
src/config/: mod.rs
src/db/: beverage_queries.rs  mod.rs  queries.rs
src/models/: beverage.rs  job.rs  label.rs  mod.rs  verification.rs
static/: index.html
tests/: README.md  e2e_test.rs  integration_test.rs
(+14 files in other folders)
